--- a/src/FontMods/Fonts.css
+++ b/src/FontMods/Fonts.css
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Niconne&display=swap');
+
+.links{
+	text-decoration: none !important;
+}
