--- a/src/FontMods/cards.css
+++ b/src/FontMods/cards.css
@@ -12,6 +12,8 @@
 
 /*Body Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 /*Roboto Fonts*/
@@ -43,6 +45,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
+
+/*Lato Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+
+/*PT Sans Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif+Caption&display=swap');
+
+/*Notable Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Notable&display=swap');
+
+/*Piedra*/
+@import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
+
+/*Yellowtail Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
+
+/*Fira Sans Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Firsa+Sans+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
+/*Oxygen Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap');
+
+/*Saira Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap');
 
 .AllFonts{
 	overflow-x:hidden !important;
@@ -188,11 +228,24 @@
 	height: 30px;
 	width: 225px;
 	border: none;
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.4);
-	border-radius: 10px;
-	padding: 10px;
+	box-sizing: border-box;
+	border-bottom: 3px solid red;
+	background-color: #f0f5f5;
+	padding: 15px;
 	text-align: center;
 	font-family: Ubuntu;
+}
+
+.input_field:hover{
+	border-bottom: 3px solid blue;
+	transition: 1s;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 .preview{
