All changes commited

--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,7 @@
   text-align: center;
   border: none;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+  margin-top: 80px;
+  font-family: Ubuntu;
 }
 
