--- a/src/FontMods/cards.css
+++ b/src/FontMods/cards.css
@@ -198,7 +198,7 @@
 	padding: 10px;
 	border-radius: 20px;
 	text-align: left;
-	width: 100% !important;
+	width: auto !important;
 	margin-left: -10px !important;
 }
 
