--- a/src/FontMods/cards.css
+++ b/src/FontMods/cards.css
@@ -199,6 +199,7 @@
 	border-radius: 20px;
 	text-align: left;
 	width: 100% !important;
+	height: auto !important;
 	margin-left: -10px !important;
 }
 
