--- a/src/FontMods/cards.css
+++ b/src/FontMods/cards.css
@@ -198,9 +198,11 @@
 	padding: 10px;
 	border-radius: 20px;
 	text-align: left;
-	width: 100% !important;
-	height: auto !important;
 	margin-left: -10px !important;
+}
+
+.rends{
+	width: 100% !important;
 }
 
 .Info{
